--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="dark light"> 
     <title>Сложно сосредоточиться</title>
+    <link rel="icon" href="./images/favicon.ico">
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/globals.css">
+    <link rel="stylesheet" href="./styles/variables.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/dark.css">
+    <link rel="stylesheet" href="./styles/light.css"> 
     <script src="./scripts/script.js"></script>
   </head>
   <body class="page">
@@ -35,6 +43,21 @@
           </li>
         </ul>
       </nav>
+      <section class="header__rec">
+        <p>REC</p>
+        <span class="light_bulb"></span>
+      </section>
+      <h1 class="big_headlines">no focus</h1>
+      <nav class="header_title">
+        <p class="title-decor">Что делать, когда не можешь делать ничего
+          Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
+      </nav>
     </header>
+    <main class="main">
+
+    </main>
+    <footer class="footer decorated-zone">
+      <h6 class="big_headlines">focus</h6>
+    </footer>
   </body>
 </html>
