исправление для маленького экрана

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </li>
           </ul>
         </nav>
-        <section class="header__rec_col">
+        <section class="header__rec_col" aria-hidden="true">
           <nav class="header__rec">
             <p>REC</p>
             <span class="light_bulb"></span>
@@ -53,10 +53,10 @@
       </section>   
       <h1 class="big_headlines">no focus</h1>
       <section class="header_title_main">
-        <nav class="header_title">
+        <section class="header_title">
           <p class="title-caption">Что делать, когда не можешь делать ничего
             <br>Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
-        </nav>
+        </section>
       </section>
     </header>
     <main class="main">
