--- a/index.html
+++ b/index.html
@@ -17,53 +17,45 @@
   </head>
   <body class="page">
     <header class="header decorated-zone">
-      <section class="header_rec_theme">
-        <nav class="header__theme-menu">
-          <ul class="header__theme-menu-list">
-            <li class="header__theme-menu-item">
-              <button
-                class="header__theme-menu-button header__theme-menu-button_type_light"
-              >
-                День
-              </button>
-            </li>
-            <li class="header__theme-menu-item">
-              <button
-                class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
-                disabled
-              >
-                Авто
-              </button>
-            </li>
-            <li class="header__theme-menu-item">
-              <button
-                class="header__theme-menu-button header__theme-menu-button_type_dark"
-              >
-                Неон
-              </button>
-            </li>
-          </ul>
-        </nav>
-        <section class="header__rec_col" aria-hidden="true">
-          <nav class="header__rec">
-            <p>REC</p>
-            <span class="light_bulb"></span>
-          </nav>
-        </section> 
-      </section>   
+      <nav class="header__theme-menu">
+        <ul class="header__theme-menu-list">
+          <li class="header__theme-menu-item">
+            <button
+              class="header__theme-menu-button header__theme-menu-button_type_light"
+            >
+              День
+            </button>
+          </li>
+          <li class="header__theme-menu-item">
+            <button
+              class="header__theme-menu-button header__theme-menu-button_active header__theme-menu-button_type_auto"
+              disabled
+            >
+              Авто
+            </button>
+          </li>
+          <li class="header__theme-menu-item">
+            <button
+              class="header__theme-menu-button header__theme-menu-button_type_dark"
+            >
+              Неон
+            </button>
+          </li>
+        </ul>
+      </nav>
+      <!-- aria-hidden="true"   light_bulb-->
+      <div class="header__rec" aria-hidden="true"> 
+        REC
+      </div>
       <h1 class="big_headlines">no focus</h1>
-      <section class="header_title_main">
-        <section class="header_title">
-          <p class="title-caption">Что делать, когда не можешь делать ничего
-            <br>Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
-        </section>
-      </section>
+      <p class="header_title title-caption">Что делать, когда не можешь делать ничего
+        <br>Или почему нам так сложно сконцентрироваться, особенно когда очень надо</p>
     </header>
     <main class="main">
-      <section class="hard_concentrate">
-        <h3 class="theme_main">Почему сосредоточиться так сложно</h3>
-        <section class="hard_concentrate_answer">
-          <h2 class="title-caption">Многозадачность</h2>
+      <section class="hard_concentrate content_section">
+        <h2 class="theme_main">Почему сосредоточиться так сложно</h2>
+        <div class="hard_concentrate_answer">
+          <h3 class="title-caption">Многозадачность</h3>
           <p class="main_text">
             Особенно сложно сосредоточиться, когда задач много и все они — важные. 
             Где же легендарная многозадачность, 
@@ -74,7 +66,7 @@
             организм паникует и выделяет кортизол и адреналин — «гормоны стресса». 
             Из-за этого мы работаем невнимательно: ошибаемся и быстро устаём.
           </p>
-          <h2 class="title-caption">Дофамин</h2>
+          <h3 class="title-caption">Дофамин</h3>
           <p class="main_text">
             С гормонами стресса всё понятно, но дальше — ещё интереснее. 
             В нашей невозможности сосредоточиться замешана и полная 
@@ -85,15 +77,13 @@
             чувствуем удовольствие. Получается замкнутый круг: чем больше 
             отвлекаешься, тем больше удовольствия получаешь.
           </p>
-        </section>
+        </div>
       </section>
-      <section class="decreased_concentration">
-        <section class="heading_theme">
-          <h3 class="theme_main heading_theme_main">Что снижает концентрацию внимания?</h3>
-        </section>
-        <section class="decreased_concentration_answer">
-          <section class="decreased_concentration_answer_item">
-            <h2 class="title-caption">Многозадачность</h2>
+      <section class="decreased_concentration content_section">
+        <h2 class="theme_main heading_theme_main">Что снижает концентрацию внимания?</h2>
+        <div class="decreased_concentration_answer">
+          <article class="decreased_concentration_answer_item">
+            <h3 class="title-caption">Многозадачность</h3>
             <p class="main_text">
               Как концентрация может снижаться из-за… концентрации? 
               Любая стрессовая ситуация (и резко меняющийся мир в целом) 
@@ -102,9 +92,9 @@
               Но быть собранными всё время — невозможно. Концентрация — мышца, 
               и она может не выдержать, если не давать ей отдохнуть.
             </p>
-          </section>
-          <section class="decreased_concentration_answer_item">
-            <h2 class="title-caption">Еда</h2>
+          </article>
+          <article class="decreased_concentration_answer_item">
+            <h3 class="title-caption">Еда</h3>
             <p class="main_text">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно 
               доставляют в мозг энергию и помогают ему лучше работать. 
@@ -113,9 +103,9 @@
               как только действие «быстрых углеводов» заканчивается, 
               мы чувствуем усталость и сонливость. И хотим ещё больше быстрых углеводов.
             </p>
-          </section>
-          <section class="decreased_concentration_answer_item">
-            <h2 class="title-caption">Гаджеты</h2>
+          </article>
+          <article class="decreased_concentration_answer_item">
+            <h3 class="title-caption">Гаджеты</h3>
             <p class="main_text">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, 
               в наушниках — подкаст, а на компьютере фоном — ещё и видео с 
@@ -125,13 +115,13 @@
               Вот и получается, что чем больше времени мы проводим в гаджетах, 
               тем больше времени затем нужно, чтобы вернуться к работе.
             </p>
-          </section>
-        </section>
+          </article>
+        </div>
       </section>
-      <section class="how_concentrate">
-        <h3 class="theme_main">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h3>
-        <section class="how_concentrate_answer">
-          <h2 class="title-caption">5 простых (на самом деле не очень) советов</h2>
+      <section class="how_concentrate content_section">
+        <h2 class="theme_main">Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх секунд)</h2>
+        <article class="how_concentrate_answer">
+          <h3 class="title-caption">5 простых (на самом деле не очень) советов</h3>
           <h4 class="title-tips">Представьте небо и облака</h4>
           <p class="main_text">
             Или листья в ручье. Тут дело в лёгкой медитации, которая помогает успокоиться. 
@@ -168,16 +158,17 @@
             чтобы прочитать пост в соцсети, достаточно нескольких минут или даже секунд. 
             А вот интересная книга способна затянуть и на несколько часов и круто тренирует направленное внимание.
           </p>
-        </section>
+        </article>
       </section>
       <section class="gallery">
         <h2 class="title-caption">А можно в картинках?</h2>
-        <section class="img">
+        <div class="img">
           <figure class="gallery__item">
             <img
               src="./images/sunset.png"
               alt="Закат"
               class="gallery__image"
+              loading="lazy"
             />
           </figure>
           <figure class="gallery__item">
@@ -185,6 +176,7 @@
               src="./images/ice-cream.png"
               alt="Мороженное"
               class="gallery__image"
+              loading="lazy"
             />
           </figure>
           <figure class="gallery__item">
@@ -192,6 +184,7 @@
               src="./images/tape.png"
               alt="Касета"
               class="gallery__image"
+              loading="lazy"
             />
           </figure>
           <figure class="gallery__item">
@@ -199,6 +192,7 @@
               src="./images/books.png"
               alt="Стопка книг"
               class="gallery__image"
+              loading="lazy"
             />
           </figure>
           <figure class="gallery__item">
@@ -206,13 +200,14 @@
               src="./images/street.png"
               alt="Улица"
               class="gallery__image"
+              loading="lazy"
             />
           </figure>
-        </section>
+        </div>
       </section>
     </main>
     <footer class="footer decorated-zone">
-      <h6 class="big_headlines">focus</h6>
+      <h5 class="big_headlines">focus</h5>
     </footer>
   </body>
 </html>
